重构第一章

--- a/前端基础/重构/01-第一个示例/重构的第一步.md
+++ b/前端基础/重构/01-第一个示例/重构的第一步.md
@@ -3,7 +3,7 @@
 :::
 
 
-`statement` 函数返回的是一个字符串，
+`statement` 函数返回的是一个字符串
 
 
 
@@ -60,14 +60,14 @@ function statement (invoice, plays) {
 
 ```
 
-> 提炼函数（106）重构swith语句
+## 重构swith语句
 
 
 首先先检查一下，如果将这块代码提炼到自己的一个函数里，有哪些变量会离开原本的作用域。 `perf`, `play`, `thisAmount` 这个3个变量。其中前两个变量会被提炼后的函数使用，但不会被修改，那么我就可以将它们以参数方式传递进来。这里只有唯一一个——`thisAmount`，因此可以将它从函数中直接返回。我还可以将其初始化放到提炼后的函数里
 
 ```js
-function amountFor(perf, play) { // [!code focus] // [!code error]
-  let thisAmount = 0;  // [!code focus] // [!code error]
+function amountFor(perf, play) { // [!code focus] 
+  let thisAmount = 0;  // [!code focus]
   switch (play.type) {
   case "tragedy":
     thisAmount = 40000;
@@ -101,7 +101,7 @@ function statement (invoice, plays) {
                           minimumFractionDigits: 2 }).format;
   for (let perf of invoice.performances) {
     const play = plays[perf.playID];
-    let thisAmount = amountFor(perf, play); // [!code focus] // [!code error]
+    let thisAmount = amountFor(perf, play); // [!code focus] 
 
     // add volume credits
     volumeCredits += Math.max(perf.audience - 30, 0);
@@ -121,6 +121,8 @@ function statement (invoice, plays) {
   result += `You earned ${volumeCredits} credits\n`;
   return result;
 ```
+
+## amountFor 函数
 
 做完一次小的改动后就立马测试，如果自测没问题后，看看提炼出来的函数，看是否能进一步提升其表达能力。一般做的第一件事就是给一些变量改名，使它们更简洁，比如将`thisAmount重命名为result`。
 
@@ -157,3 +159,349 @@ function amountFor(perf, play) {
 
 
 
+## 移除 play 变量
+
+amountFor函数有两个入参`perf` 和 `play`，`play`变量是由`performance`变量计算得到的，因此根本没必要将它作为参数传入。分解一个长函数时，将`play`这样的变量移除掉，因为它们创建了很多具有局部作用域的临时变量。
+
+> 以查询取代临时变量（178）
+
+<sapn class="marker-text">
+将变量抽取到函数里能使函数的分解过程更简单，因为就不再需要将变量作为参数传递给提炼出来的小函数。
+将变量的计算逻辑放到函数中，也有助于在提炼得到的函数与原函数之间设立清晰的边界，这能帮我发现并避免难缠的依赖及副作用
+</sapn>
+
+
+
+![LOGO](/public/image/refactoring/ReplaceTempWithQuery.png)
+
+<sapn class="marker-text-highlight">
+我理解以查询取代临时变量就是把临时变量封装成函数，然后返回
+</sapn>
+
+```js
+function playFor(aPerformance) {
+  return plays[aPerformance.playID];
+}
+```
+
+更新 statement函数如下：
+
+```js
+
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  const format = new Intl.NumberFormat("en-US",
+                        { style: "currency", currency: "USD",
+                          minimumFractionDigits: 2 }).format;
+  for (let perf of invoice.performances) {
+    // [!code focus:4] 
+    修改之前和之后对比 // [!code error]
+    const play = plays[perf.playID]; 
+    const play = playFor(perf); 
+    let thisAmount = amountFor(perf, play);
+
+    // add volume credits
+    volumeCredits += Math.max(perf.audience - 30, 0);
+    // add extra credit for every ten comedy attendees
+    if ("comedy" === play.type) {
+      volumeCredits += Math.floor(perf.audience / 5);
+    }
+
+    // print line for this order
+    result += `
+      ${play.name}: ${format(thisAmount/100)}
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += thisAmount;
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`; 
+  return result;
+```
+
+> 使用内联变量（123）手法内联play变量
+
+在一个函数内部，变量能给表达式提供有意义的名字，因此通常变量是好东西。但有时候，这个名字并不比表达式本身更具表现力。还有些时候，变量可能会妨碍重构附近的代码。若果真如此，就应该通过内联的手法消除变量。
+
+![LOGO](/public/image/refactoring/InlineVariable.png)
+
+
+<sapn class="marker-text-highlight">
+其实就是说别用变量存储了，直接用吧
+</sapn>
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  const format = new Intl.NumberFormat("en-US",
+                        { style: "currency", currency: "USD",
+                          minimumFractionDigits: 2 }).format;
+  for (let perf of invoice.performances) {
+    const play = playFor(perf);    
+    let thisAmount = amountFor(perf, playFor(perf)); // [!code error]
+
+    // add volume credits
+    volumeCredits += Math.max(perf.audience - 30, 0);
+    // add extra credit for every ten comedy attendees
+    if ("comedy" === playFor(perf).type) { // [!code error]
+      volumeCredits += Math.floor(perf.audience / 5);
+    }
+    // print line for this order
+    result += `
+      ${playFor(perf).name}: ${format(thisAmount/100)} // [!code error]
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += thisAmount;
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+
+
+```
+
+
+替换完后，可以对 `amountFor` 函数应用改变函数声明（124），移除`play`参数
+
+> 改变函数声明（124）
+
+
+![LOGO](/public/image/refactoring/ChangeFunctionDeclaration.png)
+
+一个好名字能让人一眼看出函数的用途，而不必查看其实现代码。
+
+移除play参数。会分两步走。首先在amountFor函数内部使用新提炼的函数。
+
+```js
+function amountFor(aPerformance, play) { // [!code --]
+function amountFor(aPerformance) { // [!code ++]
+  let result = 0;
+  switch (play.type) { // [!code --]
+  switch (playFor(aPerformance).type) { // [!code ++]
+  case "tragedy":
+    result = 40000;
+    if (aPerformance.audience > 30) {
+      result += 1000 * (aPerformance.audience - 30);
+    }
+    break;
+  case "comedy":
+    result = 30000;
+    if (aPerformance.audience > 20) {
+      result += 10000 + 500 * (aPerformance.audience - 20);
+    }
+    result += 300 * aPerformance.audience;
+    break;
+  default:
+      throw new Error(`unknown type: ${play.type}`); // [!code --]
+      throw new Error(`unknown type: ${playFor(aPerformance).type}`); // [!code ++]
+  }
+  return result;
+}
+```
+
+其次将 `statement` 函数中的 `play` 删掉
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  const format = new Intl.NumberFormat("en-US",
+                        { style: "currency", currency: "USD",
+                          minimumFractionDigits: 2 }).format;
+  for (let perf of invoice.performances) {
+    const play = playFor(perf);// [!code --]    
+    let thisAmount = amountFor(perf, playFor(perf)); 
+
+    // add volume credits
+    volumeCredits += Math.max(perf.audience - 30, 0);
+    // add extra credit for every ten comedy attendees
+    if ("comedy" === playFor(perf).type) { 
+      volumeCredits += Math.floor(perf.audience / 5);
+    }
+    // print line for this order
+    result += `
+      ${playFor(perf).name}: ${format(thisAmount/100)} 
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += thisAmount;
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+
+
+```
+
+移除局部变量的好处就是做提炼时会简单得多，因为需要操心的局部作用域变少了。实际上，在做任何提炼前，我一般都会先移除局部变量。
+
+处理完`amountFor`的参数后，我回过头来看一下它的调用点。它被赋值给一个临时变量，之后就不再被修改，因此我又`采用内联变量（123）`手法内联它
+
+```js
+
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  const format = new Intl.NumberFormat("en-US",
+                        { style: "currency", currency: "USD",
+                          minimumFractionDigits: 2 }).format;
+    for (let perf of invoice.performances) {
+      let thisAmount = amountFor(perf, playFor(perf)); // [!code --]
+      // add volume credits
+      volumeCredits += Math.max(perf.audience - 30, 0);
+      // add extra credit for every ten comedy attendees
+      if ("comedy" === playFor(perf).type) {
+        volumeCredits += Math.floor(perf.audience / 5);
+      }
+
+ 
+
+      // print line for this order
+      result += ` 
+        ${playFor(perf).name}: ${format(thisAmount/100)}  // [!code --]    
+        ${playFor(perf).name}: ${format(amountFor(perf)/100)} // [!code ++]
+        (${perf.audience} seats)\n
+      `;
+      totalAmount += thisAmount; // [!code --]    
+      totalAmount += amountFor(perf);// [!code ++]
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+
+
+```
+
+## 提炼计算观众积分
+
+移除 `play` 后如下：
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  const format = new Intl.NumberFormat("en-US",
+                        { style: "currency", currency: "USD",
+                          minimumFractionDigits: 2 }).format;
+
+  for (let perf of invoice.performances) {
+
+    // add volume credits
+    volumeCredits += Math.max(perf.audience - 30, 0);
+    // add extra credit for every ten comedy attendees
+    if ("comedy" === playFor(perf).type) {
+      volumeCredits += Math.floor(perf.audience / 5);
+    }
+
+    // print line for this order
+    result += `
+      ${playFor(perf).name}: ${format(amountFor(perf)/100)}
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+}
+
+```
+
+`volumeCredits` 是一个累加变量，循环的每次迭代都会更新它的值。因此最简单的方式是，将整块逻辑提炼到新函数中，然后在新函数中直接返回`volumeCredits`
+
+```js
+function volumeCreditsFor(perf) {
+  let volumeCredits = 0;
+  volumeCredits += Math.max(perf.audience - 30, 0);
+  if ("comedy" === playFor(perf).type) {
+    volumeCredits += Math.floor(perf.audience / 5);
+  }
+  return volumeCredits;
+}
+```
+
+修改后的`statement` 长这样:
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  const format = new Intl.NumberFormat("en-US",
+                        { style: "currency", currency: "USD",
+                          minimumFractionDigits: 2 }).format;
+  for (let perf of invoice.performances) {
+
+    volumeCredits += Math.max(perf.audience - 30, 0); // [!code --]   
+    if ("comedy" === playFor(perf).type) { // [!code --]   
+      volumeCredits += Math.floor(perf.audience / 5); // [!code --]   
+    }// [!code --]   
+
+
+    volumeCredits += volumeCreditsFor(perf); // [!code ++]   
+
+    // print line for this order
+    result += ` ${playFor(perf).name}: ${format(amountFor(perf)/100)} (${perf.audience} seats)\n`;
+    totalAmount += amountFor(perf);
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+}
+```
+
+将`volumeCreditsFor`函数中的变量改名：
+
+
+```js
+function volumeCreditsFor(perf) {
+  let volumeCredits = 0; // [!code --]   
+  let result = 0; // [!code ++] 
+  volumeCredits += Math.max(perf.audience - 30, 0); // [!code --]   
+   result += Math.max(aPerformance.audience - 30, 0);// [!code ++] 
+  if ("comedy" === playFor(perf).type) {
+    volumeCredits += Math.floor(perf.audience / 5); // [!code --]   
+    result += Math.floor(aPerformance.audience / 5); // [!code ++] 
+  }
+  return volumeCredits; // [!code --]   
+  return result; // [!code ++]   
+}
+```
+
+## 移除 format 变量
+
+
+此时主体函数 `statement` 长这样：
+
+```js
+
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  const format = new Intl.NumberFormat("en-US",
+                        { style: "currency", currency: "USD",
+                          minimumFractionDigits: 2 }).format;
+  
+  for (let perf of invoice.performances) {
+    volumeCredits += volumeCreditsFor(perf);
+
+    // print line for this order
+    result += `
+      ${playFor(perf).name}: ${format(amountFor(perf)/100)}
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+}
+
+```
