第一个示例第一阶段

--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -10,3 +10,44 @@
 
 
 其实我理解吧，有些点知道了，那就提前规避掉，实在规避不掉的咋弄呢，写呗，写的跟狗💩一样也没事儿，后面在多读几遍，重构它。
+
+## 提炼函数（106）
+
+![LOGO](/public/image/refactoring/ExtractFunction.png)
+
+## 以查询取代临时变量（178）
+
+![LOGO](/public/image/refactoring/ReplaceTempWithQuery.png)
+
+## 使用内联变量（123）
+
+![LOGO](/public/image/refactoring/InlineVariable.png)
+
+## 改变函数声明（124）
+
+![LOGO](/public/image/refactoring/ChangeFunctionDeclaration.png)
+
+## 拆分循环（227）
+
+![LOGO](/public/image/refactoring/SplitLoop.png)
+
+## 移动语句（223）
+
+![LOGO](/public/image/refactoring/SlideStatements.png)
+
+## 拆分阶段（154）
+
+![LOGO](/public/image/refactoring/SplitPhase.png)
+
+## 搬移函数（198）
+
+![LOGO](/public/image/refactoring/MoveFucntion.png)
+
+## 以管道取代循环（231）
+
+![LOGO](/public/image/refactoring/ReplaceLoopWithPipeline.png)
+
+
+## 以多态取代条件表达式（272）
+
+![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
