--- a/前端基础/重构/01-第一个示例/02-重构的第一步.md
+++ b/前端基础/重构/01-第一个示例/02-重构的第一步.md
@@ -1,3 +1,4 @@
+# 重构的第一步
 ::: tip
 每当我要进行重构的时候，第一个步骤永远相同：我得确保即将修改的代码拥有一组可靠的测试
 :::
@@ -447,7 +448,10 @@ function statement (invoice, plays) {
     volumeCredits += volumeCreditsFor(perf); // [!code ++]   
 
     // print line for this order
-    result += ` ${playFor(perf).name}: ${format(amountFor(perf)/100)} (${perf.audience} seats)\n`;
+    result += `
+       ${playFor(perf).name}: ${format(amountFor(perf)/100)}
+       (${perf.audience} seats)\n
+    `;
     totalAmount += amountFor(perf);
   }
   result += `Amount owed is ${format(totalAmount/100)}\n`;
@@ -502,6 +506,313 @@ function statement (invoice, plays) {
   result += `Amount owed is ${format(totalAmount/100)}\n`;
   result += `You earned ${volumeCredits} credits\n`;
   return result;
+}
+
+```
+
+
+临时变量往往会带来麻烦。它们只在对其进行处理的代码块中有用，因此临时变量实质上是鼓励你写长而复杂的函数。因此，下一步要替换掉一些临时变量，而最简单的莫过于从format变量入手。
+<sapn class="marker-text">
+这是典型的“将函数赋值给临时变量”的场景，我更愿意将其替换为一个明确声明的函数。
+</sapn>
+
+```js
+function format(aNumber) {
+  return new Intl.NumberFormat("en-US",
+                      { style: "currency", currency: "USD",
+                        minimumFractionDigits: 2 }).format(aNumber);
+}
+```
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+
+  const format = new Intl.NumberFormat("en-US", // [!code --]  
+                        { style: "currency", currency: "USD", // [!code --]  
+                          minimumFractionDigits: 2 }).format;// [!code --]  
+
+  for (let perf of invoice.performances) {
+    volumeCredits += volumeCreditsFor(perf);
+
+    // print line for this order
+    result += `
+      ${playFor(perf).name}: ${format(amountFor(perf)/100)}
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+  result += `Amount owed is ${format(totalAmount/100)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+}
+
+```
+
+
+好的命名十分重要，但往往并非唾手可得。只有恰如其分地命名，才能彰显出将大函数分解成小函数的价值。`format`未能清晰地描述其作用，应用了改变函数声明（124）手法，选取了一个能体现此意图的命名
+
+```js
+function usd(aNumber) {
+  return new Intl.NumberFormat("en-US",
+                      { style: "currency", currency: "USD",
+                        minimumFractionDigits: 2 }).format(aNumber/100);
+}
+
+```
+
+
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  for (let perf of invoice.performances) {
+    volumeCredits += volumeCreditsFor(perf);
+
+
+
+    result += `
+      ${playFor(perf).name}: ${format(amountFor(perf)/100)}  // [!code --]  
+      ${playFor(perf).name}: ${usd(amountFor(perf))} // [!code ++] 
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+  
+  result += `Amount owed is ${format(totalAmount/100)}\n`; // [!code --]  
+  result += `Amount owed is ${usd(totalAmount)}\n`; // [!code ++]  
+  result += `You earned ${volumeCredits} credits\n`; 
+  return result;
+}
+```
+
+
+## 移除观众积分总和
+
+下一个重构目标是volumeCredits。处理这个变量更加微妙，因为它是在循环的迭代过程中累加得到的。第一步，就是应用拆分循环（227）将volumeCredits的累加过程分离出来。
+
+> 拆分循环（227）
+
+你常常能见到一些身兼多职的循环，它们一次做了两三件事情，不为别的，就因为这样可以只循环一次。但如果你在一次循环中做了两件不同的事，那么每当需要修改循环时，你都得同时理解这两件事情。如果能够将循环拆分，让一个循环只做一件事情，那就能确保每次修改时你只需要理解要修改的那块代码的行为就可以了
+
+![LOGO](/public/image/refactoring/SplitLoop.png)
+
+一个循环拆成两个循环，自己做自己的事儿：
+
+```js{5-17}
+
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+
+  for (let perf of invoice.performances) { // [!code focus:11]
+    result += `
+      ${playFor(perf).name}: ${usd(amountFor(perf))}
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+
+  for (let perf of invoice.performances) {
+    volumeCredits += volumeCreditsFor(perf);
+  }
+
+result += `Amount owed is ${usd(totalAmount)}\n`;
+result += `You earned ${volumeCredits} credits\n`;
+return result;
+
+```
+
+
+可以使用移动语句（223）手法将变量声明挪动到紧邻循环的位置。
+
+> 移动语句（223）
+
+
+让存在关联的东西一起出现，可以使代码更容易理解。
+
+![LOGO](/public/image/refactoring/SlideStatements.png)
+
+
+把 `volumeCredits` 移动一下，然后就是这样的：
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let volumeCredits = 0; // [!code --]  
+  let result = `Statement for ${invoice.customer}\n`;
+  for (let perf of invoice.performances) {
+
+    result += `
+       ${playFor(perf).name}: ${usd(amountFor(perf))}
+       (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+
+  let volumeCredits = 0; // [!code ++]  
+  for (let perf of invoice.performances) {
+    volumeCredits += volumeCreditsFor(perf);
+  }
+  result += `Amount owed is ${usd(totalAmount)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+}
+
+```
+
+把与更新`volumeCredits`变量相关的代码都集中到一起，有利于以查询取代临时变量（178）手法的施展。第一步同样是先对变量的计算过程应用提炼函数（106）手法。
+
+> 提炼函数（106）
+
+“将意图与实现分开”​：如果你需要花时间浏览一段代码才能弄清它到底在干什么，那么就应该将其提炼到一个函数中，并根据它所做的事为其命名。以后再读到这段代码时，你一眼就能看到函数的用途，大多数时候根本不需要关心函数如何达成其用途（这是函数体内干的事）​。
+
+![LOGO](/public/image/refactoring/ExtractFunction.png)
+
+
+```js
+
+function totalVolumeCredits() {
+  let volumeCredits = 0;
+  for (let perf of invoice.performances) {
+    volumeCredits += volumeCreditsFor(perf);
+  }
+  return volumeCredits;
+}
+```
+使用提炼函数将 `volumeCredits`提炼出去
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  for (let perf of invoice.performances) {
+
+    // print line for this order
+    result += `
+      ${playFor(perf).name}: ${usd(amountFor(perf))}
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+
+  let volumeCredits = 0; // [!code --]  
+  for (let perf of invoice.performances) { // [!code --]  
+    volumeCredits += volumeCreditsFor(perf); // [!code --]  
+  } // [!code --]  
+
+  let volumeCredits = totalVolumeCredits(); // [!code ++]  
+  result += `Amount owed is ${usd(totalAmount)}\n`;
+  result += `You earned ${volumeCredits} credits\n`;
+  return result;
+```
+
+然后再使用内联变量（123）手法将 `totalVolumeCredits` 函数内联
+
+```js
+function statement (invoice, plays) {
+  let totalAmount = 0;
+  let result = `Statement for ${invoice.customer}\n`;
+  for (let perf of invoice.performances) {
+
+    
+    result += `
+      ${playFor(perf).name}: ${usd(amountFor(perf))}
+      (${perf.audience} seats)\n
+    `;
+    totalAmount += amountFor(perf);
+  }
+  let volumeCredits = totalVolumeCredits(); // [!code --]  
+  result += `Amount owed is ${usd(totalAmount)}\n`;
+  result += `You earned ${volumeCredits} credits\n`; // [!code --] 
+  result += `You earned ${totalVolumeCredits()} credits\n`; // [!code ++]  
+  return result;
+}
+
+
+```
+
+
+采用重复同样的步骤来移除`totalAmount`
+
+```js
+function totalAmount() {
+  let result = 0;
+  for (let perf of invoice.performances) {
+    result += amountFor(perf);
+  }
+  return result;
+}
+```
+
+
+```js
+
+function statement (invoice, plays) {
+  
+  let totalAmount = 0; // [!code --]
+
+  let result = `Statement for ${invoice.customer}\n`;
+  for (let perf of invoice.performances) {
+    result += `
+      ${playFor(perf).name}: ${usd(amountFor(perf))}
+       (${perf.audience} seats)\n
+    `;
+
+     totalAmount += amountFor(perf); // [!code --]
+  }
+
+
+  result += `Amount owed is ${usd(totalAmount)}\n`; // [!code --]
+  result += `Amount owed is ${usd(totalAmount())}\n`;// [!code ++]
+  result += `You earned ${totalVolumeCredits()} credits\n`;
+  return result;
+}
+```
+
+现在代码结构已经好多了。顶层的statement函数现在只剩7行代码，而且它处理的都是与打印详单相关的逻辑。与计算相关的逻辑从主函数中被移走，改由一组函数来支持。每个单独的计算过程和详单的整体结构，都因此变得更易理解了。目前为止，现在的`statement`函数大概长这样：
+
+```js
+
+function statement (invoice, plays) {
+  
+  let result = `Statement for ${invoice.customer}\n`;
+
+  for (let perf of invoice.performances) {
+    result += `
+      ${playFor(perf).name}: ${usd(amountFor(perf))}
+       (${perf.audience} seats)\n
+    `;
+
+  }
+
+  result += `Amount owed is ${usd(totalAmount())}\n`;
+  result += `You earned ${totalVolumeCredits()} credits\n`;
+  return result;
+
+
+  function totalAmount() {
+    // ...
+  }
+  function totalVolumeCredits() {
+    // ...
+  }
+
+  function usd() {
+    // ...
+  }
+
+  function volumeCreditsFor() {
+    // ...
+  }
+  function amountFor() {
+    // ...
+  }
 }
 
 ```
