--- a/前端基础/重构/01-第一个示例/04-重组计算过程.md
+++ b/前端基础/重构/01-第一个示例/04-重组计算过程.md
@@ -17,18 +17,421 @@
 ![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
 
 
+## 演出计算器
+
+
+enrichPerformance函数是关键所在，因为正是它用每场演出的数据来填充中转数据结构。目前它直接调用了计算价格和观众量积分的函数，我需要创建一个类，通过这个类来调用这些函数。由于这个类存放了与每场演出相关数据的计算函数，于是我把它称为演出计算器（performance calculator）​。
+
+```js
+function enrichPerformance(aPerformance) {
+  
+  const calculator = new PerformanceCalculator(aPerformance); // [!code ++]
+
+
+  const result = Object.assign({}, aPerformance);
+  result.play = playFor(result);
+  result.amount = amountFor(result);
+  result.volumeCredits = volumeCreditsFor(result);
+  return result;
+}
+
+```
+
+
+希望将函数行为搬移进来，这可以从最容易搬移的东西——play字段开始。严格来讲，我不需要搬移这个字段，因为它并未体现出多态性，但这样可以把所有数据转换集中到一处地方，保证了代码的一致性和清晰度。
+
+```js
+
+class PerformanceCalculator {
+  constructor(aPerformance) {
+    this.performance = aPerformance;
+  }
+}
+
+```
+
+使用改变函数声明（124）手法将performance的play字段传给计算器。
+
+```js
+
+function enrichPerformance(aPerformance) {
+  const calculator = new PerformanceCalculator(
+    aPerformance, 
+    playFor(aPerformance) // [!code ++]
+  );
+
+  const result = Object.assign({}, aPerformance);
+	
+	result.play = playFor(result);// [!code --]
+  result.play = calculator.play; // [!code ++]
+
+  result.amount = amountFor(result);
+  result.volumeCredits = volumeCreditsFor(result);
+  return result;
+}
+
+
+```
+
+
+
+```js
+class PerformanceCalculator {
+  constructor(
+    aPerformance,
+    aPlay  // [!code ++]
+  ) {
+    this.performance = aPerformance;
+    this.play = aPlay;  // [!code ++]
+  }
+}
+```
+
+## 搬移到计算器
+
+首先，将`amount`函数的逻辑复制一份到新的上下文中，也就是`PerformanceCalculator类`中
+
+
+
+```js
+class PerformanceCalculator {
+  constructor(
+    aPerformance,
+    aPlay  
+  ) {
+    this.performance = aPerformance;
+    this.play = aPlay; 
+  }
+
+  get amount() {
+    let result = 0;
+    switch (this.play.type) {
+      case "tragedy":
+        result = 40000;
+        if (this.performance.audience > 30) {
+          result += 1000 * (this.performance.audience - 30);
+        }
+        break;
+      case "comedy":
+        result = 30000;
+        if (this.performance.audience > 20) {
+          result += 10000 + 500 * (this.performance.audience - 20);
+        }
+        result += 300 * this.performance.audience;
+        break;
+      default:
+        throw new Error(`unknown type: ${this.play.type}`);
+    }
+    return result;
+  }
+}
+
+```
+
+<sapn class="marker-text">使新函数适应新家后，我会将原来的函数改造成一个委托函数，让它直接调用新函数。</sapn>
+
+```js
+function amountFor(aPerformance) {
+  return new PerformanceCalculator(
+		aPerformance,
+		playFor(aPerformance)
+	).amount;
+}
+```
+
+应用内联函数（115），让引用点直接调用新函数
+
+> 内联函数（115）
+
+
+![LOGO](/public/image/refactoring/InlineFunction.png)
 
 
 
 
+```js
+function enrichPerformance(aPerformance) {
+  const calculator = new PerformanceCalculator(
+		aPerformance,
+		playFor(aPerformance)
+	); 
+
+  const result = Object.assign({}, aPerformance);
+  result.play = calculator.play; 
+	
+	result.amount = amountFor(result);  // [!code --]
+	result.amount = calculator.amount;  // [!code ++]
+  
+	result.volumeCredits = volumeCreditsFor(result); 
+  return result;
+}
+
+```
+
+## 搬移观众积分
+
+```js
+
+function enrichPerformance(aPerformance) {
+  const calculator = new PerformanceCalculator(
+		aPerformance,
+		playFor(aPerformance)
+	);
+  const result = Object.assign({}, aPerformance);
+  result.play = calculator.play;
+  result.amount = calculator.amount;
+
+	result.volumeCredits = volumeCreditsFor(result); // [!code --]
+	result.volumeCredits = calculator.volumeCredits; // [!code ++]
+  return result;
+}
+
+
+class PerformanceCalculator {
+	// ...
+	
+  get amount() {
+    // ...
+  }
+
+  get volumeCredits() {
+    let result = 0;
+    result += Math.max(this.performance.audience - 30, 0);
+    if ("comedy" === this.play.type) {
+      result += Math.floor(this.performance.audience / 5);
+    }
+    return result;
+  }
+
+}
+
+```
+
+## 演出计算器多态
+
+
+第一步是应用以子类取代类型码（362）引入子类，弃用类型代码。大多数时候，有这样的类型码就够了。但也有些时候，我可以再多往前一步，引入子类。继承有两个诱人之处。首先，你可以用多态来处理条件逻辑。如果有几个函数都在根据类型码的取值采取不同的行为，多态就显得特别有用
+
+
+为此，我需要为演出计算器创建子类，并在createStatementData中获取对应的子类。要得到正确的子类，我需要将构造函数调用替换为一个普通的函数调用，因为JavaScript的构造函数里无法返回子类。于是我使用以工厂函数取代构造函数（334）。
+
+
+> 以子类取代类型码（362）
+
+![LOGO](/public/image/refactoring/ReplaceTypeCodeWithSubclasses.png)
+
+
+> 以工厂函数取代构造函数（334）
+
+![LOGO](/public/image/refactoring/ReplaceConstructorWithFactoryFunction.png)
+
+
+```js
+function enrichPerformance(aPerformance) {
+
+  const calculator = new PerformanceCalculator( // [!code --]
+  const calculator = createPerformanceCalculator( // [!code ++]
+    aPerformance,
+    playFor(aPerformance)
+  );
+  const result = Object.assign({}, aPerformance);
+  result.play = calculator.play;
+  result.amount = calculator.amount;
+  result.volumeCredits = calculator.volumeCredits;
+  return result;
+}
+
+// 工厂函数
+function createPerformanceCalculator(aPerformance, aPlay) {
+  return new PerformanceCalculator(aPerformance, aPlay);
+}
+
+```
+
+改造成普通函数后，我就可以在里面创建演出计算器的子类，然后由创建函数决定返回哪一个子类的实例。
+
+
+```js
+function createPerformanceCalculator(aPerformance, aPlay) {
+    switch(aPlay.type) {
+      case "tragedy": 
+        return new TragedyCalculator(aPerformance, aPlay);
+      case "comedy" : 
+        return new ComedyCalculator(aPerformance, aPlay);
+      default:
+        throw new Error(`unknown type: ${aPlay.type}`);
+    }
+}
+
+class TragedyCalculator extends PerformanceCalculator {
+}
+class ComedyCalculator extends PerformanceCalculator {
+}
+```
+
+## 悲剧子类 amount
+
+准备好实现多态的类结构后，我就可以继续使用以多态取代条件表达式（272）手法了
+
+我先从悲剧的价格计算逻辑开始搬移
 
 
 
+```js
+class TragedyCalculator extends PerformanceCalculator  {
+  get amount() {
+    let result = 40000;
+    if (this.performance.audience > 30) {
+      result += 1000 * (this.performance.audience - 30);
+    }
+    return result;
+  }
+}
+
+```
 
 
+## 喜剧子类 amount
+
+```js
+class ComedyCalculator extends PerformanceCalculator {
+  get amount() {
+    let result = 30000;
+    if (this.performance.audience > 20) {
+      result += 10000 + 500 * (this.performance.audience - 20);
+    }
+    result += 300 * this.performance.audience;
+    return result;
+  }
+}
+```
 
 
+更新父类
 
+```js
+class PerformanceCalculator {
+  constructor(
+    aPerformance,
+    aPlay  
+  ) {
+    this.performance = aPerformance;
+    this.play = aPlay; 
+  }
+
+  get amount() {
+    throw new Error('subclass responsibility');
+  }
+}
+```
+
+## 喜剧 volumeCredits
+
+下一个要替换的条件表达式是观众量积分的计算。我回顾了一下前面关于未来戏剧类型的讨论，发现大多数剧类在计算积分时都会检查观众数是否达到 30，仅一小部分品类有所不同。因此，将更为通用的逻辑放到超类作为默认条件，出现特殊场景时按需覆盖它，听起来十分合理。于是我将一部分喜剧的逻辑下移到子类。
+
+
+```js
+class PerformanceCalculator {
+	// ...
+
+  get volumeCredits() {
+    return Math.max(this.performance.audience - 30, 0);
+  }
+
+}
+
+
+class ComedyCalculator extends PerformanceCalculator {
+  get volumeCredits() {
+    return super.volumeCredits + Math.floor(this.performance.audience / 5);
+  }
+}
+
+```
+
+
+## 完整代码
+
+```js
+export default function createStatementData(invoice, plays) {
+  const result = {};
+  result.customer = invoice.customer;
+  result.performances = invoice.performances.map(enrichPerformance);
+  result.totalAmount = totalAmount(result);
+  result.totalVolumeCredits = totalVolumeCredits(result);
+  return result;
+
+  function enrichPerformance(aPerformance) {
+    const calculator = createPerformanceCalculator(
+      aPerformance,
+      playFor(aPerformance)
+    );
+    const result = Object.assign({}, aPerformance);
+    result.play = calculator.play;
+    result.amount = calculator.amount;
+    result.volumeCredits = calculator.volumeCredits;
+    return result;
+  }
+  function playFor(aPerformance) {
+    return plays[aPerformance.playID]
+  }
+  function totalAmount(data) {
+    return data.performances
+      .reduce((total, p) => total + p.amount, 0);
+  }
+  function totalVolumeCredits(data) {
+    return data.performances
+      .reduce((total, p) => total + p.volumeCredits, 0);
+  }
+}
+function createPerformanceCalculator(aPerformance, aPlay) {
+  switch(aPlay.type) {
+    case "tragedy": 
+      return new TragedyCalculator(aPerformance, aPlay);
+    case "comedy" :
+      return new ComedyCalculator(aPerformance, aPlay);
+    default:
+      throw new Error(`unknown type: ${aPlay.type}`);
+  }
+}
+class PerformanceCalculator {
+  constructor(aPerformance, aPlay) {
+    this.performance = aPerformance;
+    this.play = aPlay;
+  }
+  get amount() {
+    throw new Error('subclass responsibility');
+  }
+  get volumeCredits() {
+    return Math.max(this.performance.audience - 30, 0);
+  }
+}
+class TragedyCalculator extends PerformanceCalculator {
+  get amount() {
+    let result = 40000;
+    if (this.performance.audience > 30) {
+      result += 1000 * (this.performance.audience - 30);
+    }
+    return result;
+  }
+}
+class ComedyCalculator extends PerformanceCalculator {
+  get amount() {
+    let result = 30000;
+    if (this.performance.audience > 20) {
+      result += 10000 + 500 * (this.performance.audience - 20);
+    }
+    result += 300 * this.performance.audience;
+    return result;
+  }
+  get volumeCredits() {
+    return super.volumeCredits + Math.floor(this.performance.audience / 5);
+  }
+}
+```
+
+
+新结构带来的好处是，不同戏剧种类的计算各自集中到了一处地方。如果大多数修改都涉及特定类型的计算，像这样按类型进行分离就很有意义。当添加新剧种时，只需要添加一个子类，并在创建函数中返回它。
 
 
 
