--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -50,4 +50,21 @@
 
 ## 以多态取代条件表达式（272）
 
-![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
+![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
+
+
+## 内联函数（115）
+
+![LOGO](/public/image/refactoring/InlineFunction.png)
+
+
+## 子类取代类型码（362）
+
+
+![LOGO](/public/image/refactoring/ReplaceTypeCodeWithSubclasses.png)
+
+
+## 工厂函数取代构造函数（334）
+
+![LOGO](/public/image/refactoring/ReplaceConstructorWithFactoryFunction.png)
+
