--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -68,3 +68,6 @@
 
 ![LOGO](/public/image/refactoring/ReplaceConstructorWithFactoryFunction.png)
 
+## 函数参数化（310）
+
+![LOGO](/public/image/refactoring/ParameterizeFunction.png)
