--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -71,3 +71,71 @@
 ## 函数参数化（310）
 
 ![LOGO](/public/image/refactoring/ParameterizeFunction.png)
+
+## 变量改名（137）
+
+![LOGO](/public/image/refactoring/RenameVariable.png)
+
+
+## 字段改名（244）
+
+![LOGO](/public/image/refactoring/RenameField.png)
+
+## 引入参数对象（140）
+
+![LOGO](/public/image/refactoring/IntroduceParameterObject.png)
+
+
+## 保持对象完整（319）
+
+![LOGO](/public/image/refactoring/PreserveWholeObject.png)
+
+## 以命令取代函数（337）
+
+![LOGO](/public/image/refactoring/ReplaceFunctionWithCommand.png)
+
+## 分解条件表达式（260）
+
+![LOGO](/public/image/refactoring/DecomposeConditional.png)
+
+## 查询取代参数（324）
+
+![LOGO](/public/image/refactoring/ReplaceParameterWithQuery.png)
+
+
+## 移除标记参数（314）
+
+![LOGO](/public/image/refactoring/RemoveFlagArgument.png)
+
+
+## 函数组合成类（144）
+
+![LOGO](/public/image/refactoring/CombineFunctionsIntoClass.png)
+
+
+## 封装变量（132）
+
+![LOGO](/public/image/refactoring/EncapsulateVariable.png)
+
+
+## 拆分变量（240）
+
+![LOGO](/public/image/refactoring/SplitVariable.png)
+
+
+## 将查询函数和修改函数分离（306）
+
+![LOGO](/public/image/refactoring/SeparateQueryFromModifier.png)
+
+
+## 移除设值函数（331）
+
+![LOGO](/public/image/refactoring/RemoveSettingMethod.png)
+
+## 函数组合成变换（149）
+
+![LOGO](/public/image/refactoring/CombineFunctionsIntoTransform.png)
+
+## 将引用对象改为值对象（252）
+
+![LOGO](/public/image/refactoring/ChangeReferenceToValue.png)
