--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -43,6 +43,10 @@
 
 ![LOGO](/public/image/refactoring/MoveFucntion.png)
 
+## 搬移字段（207）
+
+![LOGO](/public/image/refactoring/MoveField.png)
+
 ## 以管道取代循环（231）
 
 ![LOGO](/public/image/refactoring/ReplaceLoopWithPipeline.png)
@@ -139,3 +143,97 @@
 ## 将引用对象改为值对象（252）
 
 ![LOGO](/public/image/refactoring/ChangeReferenceToValue.png)
+
+
+## 提炼类（182）
+
+![LOGO](/public/image/refactoring/ExtractClass.png)
+
+## 内联类（186）
+
+![LOGO](/public/image/refactoring/InlineClass.png)
+
+
+## 以对象取代基本类型（174）
+
+![LOGO](/public/image/refactoring/ReplacePrimitiveWithObject.png)
+
+
+## 折叠继承体系（380）
+
+![LOGO](/public/image/refactoring/CollapseHierarchy.png)
+
+
+## 移除死代码（237）
+
+![LOGO](/public/image/refactoring/RemoveDeadCode.png)
+
+
+## 引入特例（289）
+
+![LOGO](/public/image/refactoring/IntroduceSpecialCase.png)
+
+
+## 隐藏委托关系（189）
+
+![LOGO](/public/image/refactoring/HideDelegate.png)
+
+## 移除中间人（192）
+
+![LOGO](/public/image/refactoring/RemoveMiddleMan.png
+
+## 以委托取代超类（399）
+
+![LOGO](/public/image/refactoring/ReplaceSuperclassWithDelegate.png)
+
+
+## 以委托取代子类（381）
+
+![LOGO](/public/image/refactoring/ReplaceSubclassWithDelegate.png)
+
+
+## 提炼超类（375）
+
+![LOGO](/public/image/refactoring/ExtractSuperclass.png)
+
+
+## 封装记录（162）
+
+![LOGO](/public/image/refactoring/EncapsulateRecord.png)
+
+
+## 函数下移（359）
+
+![LOGO](/public/image/refactoring/PushDownMethod.png)
+
+## 字段下移（361）
+
+![LOGO](/public/image/refactoring/PushDownField.png)
+
+## 引入断言（302）
+
+![LOGO](/public/image/refactoring/IntroduceAssertion.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
