--- a/前端基础/重构/04-第一组重构/02-内联函数.md
+++ b/前端基础/重构/04-第一组重构/02-内联函数.md
@@ -1,1 +1,88 @@
 # 内联函数
+
+## 示意图
+
+![LOGO](/public/image/refactoring/InlineFunction.png)
+
+
+## 动机
+
+但有时候你会遇到某些函数，其内部代码和函数名称同样清晰易读。也可能你重构了该函数的内部实现，使其内容和其名称变得同样清晰。<sapn class="marker-text">若果真如此，你就应该去掉这个函数，直接使用其中的代码。间接性可能带来帮助，但非必要的间接性总是让人不舒服。</sapn>
+
+
+## 做法
+
+- 检查函数，确定它不具多态性。
+   - 如果该函数属于一个类，并且有子类继承了这个函数，那么就无法内联。
+- 找出这个函数的所有调用点。将这个函数的所有调用点都替换为函数本体。每次替换之后，执行测试。
+
+
+## 范例
+
+::: code-group
+
+```js [前]
+
+function rating(aDriver) {
+　return moreThanFiveLateDeliveries(aDriver) ? 2 : 1;
+}
+
+function moreThanFiveLateDeliveries(aDriver) { 
+　return aDriver.numberOfLateDeliveries > 5;
+}
+
+```
+
+
+```js [后]
+function rating(aDriver) {
+  return aDriver.numberOfLateDeliveries > 5 ? 2 : 1;
+}
+```
+:::
+
+
+不过实际情况可能不会这么简单，需要我多做一点儿工作，帮助代码融入它的新家。例如，开始时的代码与前面稍有不同：
+
+
+::: code-group
+
+```js [待重构]
+function reportLines(aCustomer) {
+　const lines = [];
+　gatherCustomerData(lines, aCustomer);
+　return lines;
+}
+function gatherCustomerData(out, aCustomer) {
+　out.push(["name", aCustomer.name]);
+　out.push(["location", aCustomer.location]);
+}
+
+```
+
+```js [第一步]
+function reportLines(aCustomer) {
+　const lines = [];
+　lines.push(["name", aCustomer.name]); // [!code ++]
+　gatherCustomerData(lines, aCustomer); 
+　return lines;
+}
+function gatherCustomerData(out, aCustomer) {
+　out.push(["name", aCustomer.name]); 
+　out.push(["location", aCustomer.location]);
+}
+```
+
+```js [第二步]
+function reportLines(aCustomer) {
+　const lines = [];
+　lines.push(["name", aCustomer.name]); // [!code ++]
+　lines.push(["location", aCustomer.location]); // [!code ++]
+　return lines;
+}
+```
+
+:::
+
+我要把gatherCustomerData内联到reportLines中，这时简单的剪切和粘贴就不够了。这段代码还不算很麻烦，大多数时候我还是一步到位地完成了重构，只是需要做些调整。如果想更谨慎些，也可以每次搬移一行代码：可以首先对第一行代码使用[搬移语句到调用者（217）](../目录.md#搬移语句到调用者-217)
+
