--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -15,6 +15,10 @@
 
 ![LOGO](/public/image/refactoring/ExtractFunction.png)
 
+## 内联函数（115）
+
+![LOGO](/public/image/refactoring/InlineFunction.png)
+
 
 ## 以查询取代临时变量（178）
 
@@ -58,9 +62,7 @@
 ![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
 
 
-## 内联函数（115）
 
-![LOGO](/public/image/refactoring/InlineFunction.png)
 
 
 ## 子类取代类型码（362）
@@ -217,7 +219,8 @@
 
 
 
-
+## 搬移语句到调用者（217）
+![LOGO](/public/image/refactoring/MoveStatementsToCallers.png)
 
 
 
