第一组重构

--- a/前端基础/重构/04-第一组重构/01-提炼函数.md
+++ b/前端基础/重构/04-第一组重构/01-提炼函数.md
@@ -17,17 +17,13 @@
 
 创造一个新函数，根据这个函数的意图来对它命名<sapn class="marker-text">（以它“做什么”来命名，而不是以它“怎样做”命名）​。</sapn>
 
-
 将待提炼的代码从源函数复制到新建的目标函数中。仔细检查提炼出的代码，看看其中是否引用了作用域限于源函数、在提炼出的新函数中访问不到的变量。若是，以参数的形式将它们传递给新函数。
 
 这些“作用域限于源函数”的变量通常是局部变量或者源函数的参数。最通用的做法是将它们都作为参数传递给新函数。只要没在提炼部分对这些变量赋值，处理起来就没什么难度。
 
 <sapn class="marker-text">如果某个变量是在提炼部分之外声明但只在提炼部分被使用，就把变量声明也搬移到提炼部分代码中去。</sapn>
 
-
 如果变量按值传递给提炼部分又在提炼部分被赋值，就必须多加小心。如果只有一个这样的变量，我会尝试将提炼出的新函数变成一个查询（query）​，用其返回值给该变量赋值。
-
-
 
 ## 示例
 
@@ -35,7 +31,7 @@
 
 ::: code-group
 
-```js [前]
+```js [源函数]
 function printOwing(invoice) {
 　let outstanding = 0;
 
@@ -64,7 +60,7 @@ function printOwing(invoice) {
 
 ```
 
-```js [后]
+```js [重构后]
 function printOwing(invoice) {
   let outstanding = 0;
 
@@ -106,9 +102,9 @@ function printBanner() {
 
 局部变量最简单的情况是：被提炼代码段只是读取这些变量的值，并不修改它们。这种情况下我可以简单地将它们当作参数传给目标函数。
 
-
 ::: code-group
-```js [前]
+
+```js [源函数]
 function printOwing(invoice) {
  let outstanding = 0;
 
@@ -134,8 +130,7 @@ function printOwing(invoice) {
 }
 ```
 
-
-```js [后]
+```js [重构后]
 function printOwing(invoice) {
  let outstanding = 0;
 
@@ -164,6 +159,7 @@ function printDetails(invoice, outstanding) {
 　console.log(`due: ${invoice.dueDate.toLocaleDateString()}`);
 }
 ```
+
 :::
 
 <sapn class="marker-text">
@@ -199,11 +195,7 @@ function recordDueDate(invoice) {
 
 如果被提炼代码段对局部变量赋值，问题就变得复杂了。这里我们只讨论临时变量的问题。如果你发现源函数的参数被赋值，应该马上使用[拆分变量（240）](../目录.md#拆分变量-240)将其变成临时变量。
 
-
-
-
 被赋值的临时变量也分两种情况。较简单的情况是：这个变量只在被提炼代码段中使用。若果真如此，你可以将这个临时变量的声明移到被提炼代码段中，然后一起提炼出去。如果变量的初始化和使用离得有点儿远，可以用[移动语句（223）](../目录.md#移动语句-223)把针对这个变量的操作放到一起。
-
 
 比较糟糕的情况是：被提炼代码段之外的代码也使用了这个变量。此时我需要返回修改后的值。
 比如：
@@ -240,6 +232,7 @@ function printOwing(invoice) {
 　printDetails(invoice, outstanding);
 }
 ```
+
 然后把想要提炼的代码复制到目标函数中。
 
 ```js
@@ -267,7 +260,6 @@ function calculateOutstanding(invoice) { // [!code ++]
 
 由于outstanding变量的声明已经被搬移到提炼出的新函数中，就不需要再将其作为参数传入了。outstanding是提炼代码段中唯一被重新赋值的变量，所以我可以直接返回它。
 
-
 ```js
 function printOwing(invoice) {
 　printBanner();
@@ -285,47 +277,6 @@ function calculateOutstanding(invoice) {
 
 ```
 
-
 > 这时候，你可能会问：​“如果需要返回的变量不止一个，又该怎么办呢？​”
 
 挑选另一块代码来提炼。我比较喜欢让每个函数都只返回一个值，所以我会安排多个函数，用以返回多个值。如果真的有必要提炼一个函数并返回多个值，可以构造并返回一个记录对象—不过通常更好的办法还是回过头来重新处理局部变量，我常用的重构手法有[以查询取代临时变量（178））](../目录.md#以查询取代临时变量-178)和[拆分变量（240）](../目录.md#拆分变量-240)。
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
