--- a/前端基础/重构/04-第一组重构/02-内联函数.md
+++ b/前端基础/重构/04-第一组重构/02-内联函数.md
@@ -21,7 +21,7 @@
 
 ::: code-group
 
-```js [前]
+```js [源函数]
 
 function rating(aDriver) {
 　return moreThanFiveLateDeliveries(aDriver) ? 2 : 1;
@@ -34,7 +34,7 @@ function moreThanFiveLateDeliveries(aDriver) {
 ```
 
 
-```js [后]
+```js [重构后]
 function rating(aDriver) {
   return aDriver.numberOfLateDeliveries > 5 ? 2 : 1;
 }
@@ -47,7 +47,7 @@ function rating(aDriver) {
 
 ::: code-group
 
-```js [待重构]
+```js [源函数]
 function reportLines(aCustomer) {
 　const lines = [];
 　gatherCustomerData(lines, aCustomer);
