--- a/前端基础/重构/04-第一组重构/03-提炼变量.md
+++ b/前端基础/重构/04-第一组重构/03-提炼变量.md
@@ -1,1 +1,100 @@
 # 提炼变量
+
+### 示意图
+
+![LOGO](/public/image/refactoring/ExtractVariable.png)
+
+## 动机
+<sapn class="marker-text"></sapn>
+表达式有可能非常复杂而难以阅读。这种情况下，局部变量可以帮助我们将表达式分解为比较容易管理的形式。<sapn class="marker-text">在面对一块复杂逻辑时，局部变量使我能给其中的一部分命名，这样我就能更好地理解这部分逻辑是要干什么。</sapn>
+
+如果我考虑使用提炼变量，就意味着我<sapn class="marker-text">要给代码中的一个表达式命名</sapn>。一旦决定要这样做，我就得考虑这个名字所处的上下文。如果这个名字只在当前的函数中有意义，那么提炼变量是个不错的选择；但如果这个变量名在更宽的上下文中也有意义，我就会考虑将其暴露出来，<sapn class="marker-text">通常以函数的形式。</sapn>如果在更宽的范围可以访问到这个名字，就意味着其他代码也可以用到这个表达式，而不用把它重写一遍，这样能减少重复，并且能更好地表达我的意图。
+
+
+## 做法
+
+- 确认要提炼的表达式没有副作用。
+- 声明一个不可修改的变量，把你想要提炼的表达式复制一份，以该表达式的结果值给这个变量赋值。
+- 用这个新变量取代原来的表达式。
+
+## 范例
+
+
+::: code-group
+
+```js [源函数]
+function price(order) {
+　return order.quantity * order.itemPrice -
+　　Math.max(0, order.quantity - 500) * order.itemPrice * 0.05 +
+　　Math.min(order.quantity * order.itemPrice * 0.1, 100);
+}
+```
+
+```js [重构后]
+
+function price(order) {
+　const basePrice = order.quantity * order.itemPrice;
+　const quantityDiscount = 
+    Math.max(0, order.quantity - 500) * order.itemPrice * 0.05;
+　const shipping = Math.min(basePrice * 0.1, 100);
+　return basePrice - quantityDiscount + shipping; // [!code ++]
+}
+```
+
+
+:::
+
+下面是同样的代码，但这次它位于一个类中：
+
+要提炼的还是同样的变量，但我意识到：<sapn class="marker-text">这些变量名所代表的概念，适用于整个Order类，而不仅仅是“计算价格”的上下文。既然如此，我更愿意将它们提炼成方法，而不是变量。</sapn>
+
+::: code-group
+
+```js [源函数]
+
+class Order {
+　constructor(aRecord) {
+　　this._data = aRecord;
+　}
+
+　get quantity() {return this._data.quantity;}
+　get itemPrice() {return this._data.itemPrice;}
+
+　get price() {
+　　return this.quantity * this.itemPrice -
+　　　Math.max(0, this.quantity - 500) * this.itemPrice * 0.05 +
+　　　Math.min(this.quantity * this.itemPrice * 0.1, 100);
+　}
+}
+
+```
+
+```js [重构后]
+class Order {
+　constructor(aRecord) {
+　　this._data = aRecord;
+　}
+　get quantity() {
+    return this._data.quantity;
+  }
+　get itemPrice() {
+    return this._data.itemPrice;
+  }
+
+　get price() {
+　　return this.basePrice - this.quantityDiscount + this.shipping;
+　}
+  // 提炼成方法，而不是变量
+　get basePrice()        {
+    return this.quantity * this.itemPrice;
+  }
+　get quantityDiscount() {
+    return Math.max(0, this.quantity - 500) * this.itemPrice * 0.05;
+  }
+　get shipping() {
+    return Math.min(this.basePrice * 0.1, 100);
+  }
+}
+```
+
+:::
