--- a/前端基础/重构/04-第一组重构/05-改变函数声明.md
+++ b/前端基础/重构/04-第一组重构/05-改变函数声明.md
@@ -1,2 +1,226 @@
 # 改变函数声明
 
+## 示意图
+
+![LOGO](/public/image/refactoring/ChangeFunctionDeclaration.png)
+
+## 动机
+
+<sapn class="marker-text">函数是我们将程序拆分成小块的主要方式。函数声明则展现了如何将这些小块组合在一起工作</sapn>最重要的元素当属函数的名字。一个好名字能让我一眼看出函数的用途，而不必查看其实现代码。
+
+<sapn class="marker-text">有一个改进函数名字的好办法：先写一句注释描述这个函数的用途，再把这句注释变成函数的名字</sapn>
+
+对于函数的参数，道理也是一样。函数的参数列表阐述了函数如何与外部世界共处。
+
+函数的参数设置了一个上下文，只有在这个上下文中，我才能使用这个函数。假如有一个函数的用途是把某人的电话号码转换成特定的格式，并且该函数的参数是一个人（person）​，那么我就没法用这个函数来处理公司（company）的电话号码。如果我把函数接受的参数由“人”改成“电话号码”​，这段处理电话号码格式的代码就能被更广泛地使用。
+
+## 做法
+
+### 简单的做法
+
+- 如果想要移除一个参数，需要先确定函数体内没有使用该参数。
+- 修改函数声明，使其成为你期望的状态。
+- 找出所有使用旧的函数声明的地方，将它们改为使用新的函数声明。
+
+### 迁移式做法
+
+- 如果有必要的话，先对函数体内部加以重构，使后面的提炼步骤易于开展。
+- 使用[提炼函数（106）](../目录.md#提炼函数-160)将函数体提炼成一个新函数。
+- 如果提炼出的函数需要新增参数，用前面的简单做法添加即可。
+- 对旧函数使用[内联函数（115）](../目录.md#内联函数-115)。
+- 如果新函数使用了临时的名字，再次使用[改变函数声明（124）](../目录.md#改变函数声明-124)将其改回原来的名字。
+
+如果要重构一个已对外发布的API，在提炼出新函数之后，你可以暂停重构，将原来的函数声明为“不推荐使用”​（deprecated）​，然后给客户端一点时间转为使用新函数。等你有信心所有客户端都已经从旧函数迁移到新函数，再移除旧函数的声明。
+
+## 范例
+
+### 函数改名（简单做法）
+
+找出所有调用者，修改函数声明，然后修改调用者。最好是能分步骤修改：如果既想给函数改名，又想添加参数，我会先完成改名，测试，然后添加参数，然后再次测试。
+
+::: code-group
+
+```js [源函数]
+function circum(radius) {
+  return 2 * Math.PI * radius;
+}
+```
+
+```js [重构后]
+
+function circumference(radius) { // [!code ++]
+  return 2 * Math.PI * radius;
+}
+
+```
+
+:::
+
+### 函数改名（迁移式做法）
+
+::: code-group
+
+```js [源函数]
+
+function circum(radius) {
+  return 2 * Math.PI * radius;
+}
+
+```
+
+```js [使用提炼函数（106）]
+
+function circum(radius) {
+  return circumference(radius); // [!code ++]
+}
+function circumference(radius) { 
+  return 2 * Math.PI * radius; 
+} 
+```
+
+:::
+
+### 添加参数
+
+想象一个管理图书馆的软件，其中有代表“图书”的Book类，它可以接受顾客（customer）的预订（reservation）​
+
+现在我<sapn class="marker-text">需要支持“高优先级预订”​，因此我要给addReservation额外添加一个参数，用于标记这次预订应该进入普通队列还是优先队列。如果能很容易地找到并修改所有调用方，我可以直接修改；但如果不行，我仍然可以采用迁移式做法，下面是详细的过程。</sapn>
+
+::: code-group
+
+```js [源函数]
+
+class Book {
+ addReservation(customer) {
+  this._reservations.push(customer);
+ }
+}
+
+```
+
+```js [用提炼函数（106）]
+
+class Book {
+ addReservation(customer) {
+  this.zz_addReservation(customer); // [!code ++]
+ }
+ zz_addReservation(customer) {
+  this._reservations.push(customer);
+ }
+}
+
+
+```
+
+```js [增加参数]
+
+class Book {
+ addReservation(customer) {
+  this.zz_addReservation(customer, false); // [!code ++]
+ }
+
+ zz_addReservation(customer, isPriority) {
+  this._reservations.push(customer);
+ }
+}
+```
+
+```js [引入断言（302）]
+
+class Book {
+ addReservation(customer) {
+  this.zz_addReservation(customer, false); // [!code ++]
+ }
+
+ zz_addReservation(customer, isPriority) {
+  assert(isPriority === true || isPriority === false); // [!code ++]
+  this._reservations.push(customer);
+ }
+}
+```
+
+```js [对源函数使用内联函数（115）]
+
+对源函数使用内联函数（115），使其调用者转而使用新函数。
+这样我可以每次只修改一个调用者。
+现在我就可以把新函数改回原来的名字了。
+一般而言，此时用简单做法就够了；但如果有必要，也可以再用一遍迁移式做法。
+
+```
+
+:::
+
+
+### 把参数改为属性
+
+假设我有一个函数，用于判断顾客（customer）是不是来自新英格兰（New England）地区：
+
+inNewEngland函数只用到了顾客所在的州（state）这项信息，基于这个信息来判断顾客是否来自新英格兰地区。我希望重构这个函数，`使其接受州代码（state code）作为参数`，这样就能去掉对“顾客”概念的依赖，使这个函数能在更多的上下文中使用。
+
+::: code-group
+
+```js [源函数]
+
+function inNewEngland(aCustomer) {
+  return ["MA", "CT", "ME", "VT", "NH", "RI"]
+				.includes(aCustomer.address.state);
+}
+
+// 调用处
+const newEnglanders = someCustomers.filter(c => inNewEngland(c));
+```
+
+```js [提炼变量（119）]
+
+function inNewEngland(aCustomer) {
+  const stateCode = aCustomer.address.state; // [!code ++]
+  return ["MA", "CT", "ME", "VT", "NH", "RI"].includes(stateCode);
+}
+```
+
+```js [提炼函数（106）]
+
+function inNewEngland(aCustomer) {
+  const stateCode = aCustomer.address.state;
+  return xxNEWinNewEngland(stateCode); // [!code ++]
+}
+// 给新函数起一个好记又独特的临时名字
+function xxNEWinNewEngland(stateCode) {
+  return ["MA", "CT", "ME", "VT", "NH", "RI"].includes(stateCode);
+}
+
+
+```
+
+```js [使用内联变量（123）]
+
+function inNewEngland(aCustomer) {
+	const stateCode = aCustomer.address.state; // [!code --]
+  return xxNEWinNewEngland(aCustomer.address.state);
+}
+
+```
+
+```js [内联函数（115）]
+
+const newEnglanders = someCustomers
+		.filter(c => xxNEWinNewEngland(c.address.state)); // [!code --]
+
+// 测试好后更新函数名字
+const newEnglanders = someCustomers
+	.filter(c => inNewEngland(c.address.state));
+
+```
+
+
+
+:::
+
+
+重构后
+
+```js 
+function inNewEngland(stateCode) {
+  return ["MA", "CT", "ME", "VT", "NH", "RI"].includes(stateCode);
+}
+```
