--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -11,18 +11,17 @@
 
 其实我理解吧，有些点知道了，那就提前规避掉，实在规避不掉的咋弄呢，写呗，写的跟狗💩一样也没事儿，后面在多读几遍，重构它。
 
+    
 ## 提炼函数（106）
-
 ![LOGO](/public/image/refactoring/ExtractFunction.png)
 
 ## 内联函数（115）
 
 ![LOGO](/public/image/refactoring/InlineFunction.png)
 
+## 提炼变量（119）
 
-## 以查询取代临时变量（178）
-
-![LOGO](/public/image/refactoring/ReplaceTempWithQuery.png)
+![LOGO](/public/image/refactoring/ExtractVariable.png)
 
 ## 使用内联变量（123）
 
@@ -31,6 +30,21 @@
 ## 改变函数声明（124）
 
 ![LOGO](/public/image/refactoring/ChangeFunctionDeclaration.png)
+
+
+## 封装变量（132）
+
+![LOGO](/public/image/refactoring/EncapsulateVariable.png)
+
+
+
+
+
+## 以查询取代临时变量（178）
+
+![LOGO](/public/image/refactoring/ReplaceTempWithQuery.png)
+
+
 
 ## 拆分循环（227）
 
@@ -60,9 +74,6 @@
 ## 以多态取代条件表达式（272）
 
 ![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
-
-
-
 
 
 ## 子类取代类型码（362）
@@ -119,10 +130,6 @@
 
 ![LOGO](/public/image/refactoring/CombineFunctionsIntoClass.png)
 
-
-## 封装变量（132）
-
-![LOGO](/public/image/refactoring/EncapsulateVariable.png)
 
 
 ## 拆分变量（240）
